--- a/VulkanDemo/KAWAII/KAWAII.vcxproj
+++ b/VulkanDemo/KAWAII/KAWAII.vcxproj
@@ -155,6 +155,8 @@
     <ClCompile Include="Core\KeyInput.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Math\Math.cpp" />
+    <ClCompile Include="Object\PerFrameResource.cpp" />
+    <ClCompile Include="Thread\ThreadWorker.cpp" />
     <ClCompile Include="VulkanWrapper\Buffer.cpp" />
     <ClCompile Include="VulkanWrapper\BufferBase.cpp" />
     <ClCompile Include="VulkanWrapper\CommandBuffer.cpp" />
@@ -188,6 +190,9 @@
     <ClInclude Include="Common\Singleton.h" />
     <ClInclude Include="Core\KeyInput.h" />
     <ClInclude Include="Math\Math.h" />
+    <ClInclude Include="Object\PerFrameResource.h" />
+    <ClInclude Include="Thread\ThreadTaskQueue.hpp" />
+    <ClInclude Include="Thread\ThreadWorker.hpp" />
     <ClInclude Include="VulkanWrapper\Buffer.h" />
     <ClInclude Include="VulkanWrapper\BufferBase.h" />
     <ClInclude Include="VulkanWrapper\CommandBuffer.h" />
