--- a/VulkanDemo/KAWAII/KAWAII.vcxproj
+++ b/VulkanDemo/KAWAII/KAWAII.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="VulkanWrapper\ShaderModule.cpp" />
     <ClCompile Include="VulkanWrapper\StagingBuffer.cpp" />
     <ClCompile Include="VulkanWrapper\SwapChain.cpp" />
+    <ClCompile Include="VulkanWrapper\VertexBuffer.cpp" />
     <ClCompile Include="VulkanWrapper\VKFenceGuardRes.cpp" />
     <ClCompile Include="VulkanWrapper\VKGPUSyncRes.cpp" />
   </ItemGroup>
@@ -218,6 +219,7 @@
     <ClInclude Include="VulkanWrapper\ShaderModule.h" />
     <ClInclude Include="VulkanWrapper\StagingBuffer.h" />
     <ClInclude Include="VulkanWrapper\SwapChain.h" />
+    <ClInclude Include="VulkanWrapper\VertexBuffer.h" />
     <ClInclude Include="VulkanWrapper\VKFenceGuardRes.h" />
     <ClInclude Include="VulkanWrapper\VKGPUSyncRes.h" />
   </ItemGroup>
